<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/white"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="90"
        android:gravity="center"
        >

        <LinearLayout
            android:id="@+id/layout_1"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="30"
            android:background="@drawable/bg_lyt"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/text_table_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q1"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <View
            android:layout_width="30dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/layout_2"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="30"
            android:background="@drawable/bg_lyt"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_table_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q2"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <View
            android:layout_width="30dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/layout_3"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="30"
            android:background="@drawable/bg_lyt"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_table_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q3"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="@color/black"
                />

        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="30dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="90"
        android:gravity="center"
        >

        <LinearLayout
            android:id="@+id/layout_4"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="30"
            android:background="@drawable/bg_lyt"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_table_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q4"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <View
            android:layout_width="30dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/layout_5"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="30"
            android:background="@drawable/bg_lyt"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_table_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q5"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <View
            android:layout_width="30dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/layout_6"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="30"
            android:background="@drawable/bg_lyt"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_table_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q6"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="@color/black"
                />

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="30dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="90"
        android:gravity="center"
        >

        <LinearLayout
            android:id="@+id/layout_7"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="30"
            android:background="@drawable/bg_lyt"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_table_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q7"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <View
            android:layout_width="30dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/layout_8"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="30"
            android:background="@drawable/bg_lyt"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_table_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q8"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <View
            android:layout_width="30dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/layout_9"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="30"
            android:background="@drawable/bg_lyt"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_table_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/q9"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="@color/black"
                />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <Button
            android:id="@+id/reservar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resevar"
            android:backgroundTint="@color/red"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="10">
            <Button
                android:id="@+id/limpar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/Limpar"/>
            <View
                android:layout_width="20dp"
                android:layout_height="0dp"/>
            <Button
                android:id="@+id/tirarReserva"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/TirarReserva"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>